--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html lang="en">
 Hi everyone! My name is Hunter Mede.
 I live in California and I'm a junior at Burlingame HS. 
 I'm looking forward to learning as much as I can.
