--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>Hi everyone! My name is Hunter Mede.
+<html lang="en"><head>Hi everyone! My name is Hunter Mede.
 I live in California and I'm a junior at Burlingame HS. 
 I'm looking forward to learning as much as I can.
