--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html lang="en">
 <head>
 <Hi everyone! My name is Hunter Mede.
-I live in California and I'm a junior at Burlingame HS.
-I'm looking forward to learning as much as I can.>
+I live in California and I am a junior at Burlingame HS.
+Looking forward to learning as much as I can.>
