--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <head>
 <Hi everyone! My name is Hunter Mede.
 I live in California and I am a junior at Burlingame HS.
-Looking forward to learning as much as I can.>
+Looking forward to learning as much as I can in this class.>
