--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<Hi everyone! My name is Hunter Mede.
+Hi everyone! My name is Hunter Mede.
 I live in California and I am a junior at Burlingame HS.
-Looking forward to learning as much as I can in this class.>
+Looking forward to learning as much as I can in this class.
