--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
 Hi everyone! My name is Hunter Mede.
-I live in California and I am a junior at Burlingame HS.
+I live in California and I'm a junior at Burlingame HS.
 Looking forward to learning as much as I can in this class.
