--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-Hi everyone! My name is Hunter Mede.
+<html>
+<head>
+<title>page title</title>
+</head>
+<body>Hi everyone! My name is Hunter Mede.
 I live in California and I'm a junior at Burlingame HS.
 Looking forward to learning as much as I can in this class.
+</body>
+</html>
