--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>page title</title>
+<title>Hi Everyone!</title>
 </head>
-<body>Hi everyone! My name is Hunter Mede.
+<body>My name is Hunter Mede.
 I live in California and I'm a junior at Burlingame HS.
 Looking forward to learning as much as I can in this class.
 </body>
