--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Hi Everyone!</title>
 </head>
 <body>My name is Hunter Mede.
-I live in California and I'm a junior at Burlingame HS.
-Looking forward to learning as much as I can in this class.
+<p>I live in California and I'm a junior at Burlingame HS.<p>
+<p>Looking forward to learning as much as I can in this class.<p>
 </body>
 </html>
