--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Hi Everyone!</title>
+<title></title>
 </head>
-<body>My name is Hunter Mede.
+<body>Hi Everyone!
+<p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at Burlingame HS.<p>
 <p>Looking forward to learning as much as I can in this class.<p>
 </body>
