--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title></title>
 </head>
-<body>Hi Everyone!
+<body><p>Hi Everyone!<p>
 <p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at Burlingame HS.<p>
 <p>Looking forward to learning as much as I can in this class.<p>
