--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Hi Everyone!</title>
+<title><strong>Hi Everyone!<strong></title>
 </head>
 <body>
 <p>Hi Everyone!<p>
