--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title><strong>Hi Everyone!<strong></title>
+<title></title>
 </head>
 <body>
-<p>Hi Everyone!<p>
+<p><strong>Hi Everyone!<strong><p>
 <p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at Burlingame HS.<p>
 <p>Looking forward to learning as much as I can in this class.<p>
