--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Hi Everyone!<title>
+<title>
+Hi Everyone!
+<title>
 </head>
 <body>
 <p><strong>Hi Everyone!</strong><p>
