--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>
-Hi Everyone!
-<title>
+<title><title>
 </head>
 <body>
 <p><strong>Hi Everyone!</strong><p>
