--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
 <title><title>
 </head>
-<body>
-<p><strong>Hi Everyone!</strong><p>
+<body><p><strong>Hi Everyone!</strong><p>
 <p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at Burlingame HS.<p>
-<p>Looking forward to learning as much as I can in this class.<p>
-</body>
+<p>Looking forward to learning as much as I can in this class.<p></body>
 </html>
