--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Hi Everyone!</title>
+<title><em>Hi Everyone!</em></title>
 </head>
 <body><p><strong>Hi Everyone!</strong><p>
 <p>My name is Hunter Mede.<p>
