italic 1st sentence not title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title><em>Hi Everyone!</em></title>
+<title>Hi Everyone!</title>
 </head>
-<body><p><strong>Hi Everyone!</strong><p>
+<body><p><em><strong>Hi Everyone!</strong></em><p>
 <p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at Burlingame HS.<p>
 <p>Looking forward to learning as much as I can in this class.<p></body>
