--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <title>Hi Everyone!</title>
 </head>
-<body><p><strong><em>Hi Everyone!<></strong><p>
+<body><p><strong><em>Hi Everyone!</em></strong><p>
 <p>My name is Hunter Mede.<p>
-<p>I live in California and I'm a junior at <a href= "https://www.smuhsd.org/burlingamehigh" title="My High School" target="_blank">Burlingame HS</a><p>
-<p>Looking forward to learning as much as I can in this class.<p></body>
+<p>I live in California and I'm a junior at <a href= "https://www.smuhsd.org/burlingamehigh" title="My High School" target="_blank">Burlingame HS</a>.<p>
+<p>Looking forward to learning as much as I can in this class.<p>
+</body>
