Per modzilla added
<meta charset="utf-8">

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
 <title>Hi Everyone!</title>
 </head>
 <body><p><strong><em>Hi Everyone!</em></strong><p>
