removing lang=en and ending w/html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="utf-8">
 <title>Hi Everyone!</title>
@@ -9,3 +9,4 @@
 <p>I live in California and I'm a junior at <a href= "https://www.smuhsd.org/burlingamehigh" title="My High School" target="_blank">Burlingame HS</a>.</p>
 <p>Looking forward to learning as much as I can in this class.<p>
 </body>
+<html>
