--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at <a href= "https://www.smuhsd.org/burlingamehigh" title="My High School" target="_blank">Burlingame HS</a>.</p>
 <p>This is my first website, so I'm reading the MDN link on our syllabus to learn how I can tweak my site to include different attributes.<p>
-<p>Looking forward to learning as much as I can in this class.<p>
+<p>Looking forward to learning as much as I can!<p>
 </body>
