--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body><p><strong><em>Hi Everyone!</em></strong><p>
 <p>My name is Hunter Mede.<p>
 <p>I live in California and I'm a junior at <a href= "https://www.smuhsd.org/burlingamehigh" title="My High School" target="_blank">Burlingame HS</a>.</p>
-<p>This is my first website, so I'm reading the MDN link on our syllabus to learn how I can tweak my site to include different attributes.</p>
+<p>This is my first website, so I'm reading the MDN link on our syllabus to learn how I can tweak my site by adding different attributes to it.</p>
 <p>Looking forward to learning as much as I can!<p>
 </body>
